test_data/end_to_end/err__use_as_loop/stderr.txt
error: could not find `S1` in current scope
  --> main.cz:2:5
2 | use S1 as S2;
        ~~
